--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.30",
+    "aws-cdk": "2.136.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "aws-cdk": "2.136.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.552.0",
+    "@aws-sdk/s3-request-presigner": "^3.552.0",
     "aws-cdk-lib": "2.136.0",
+    "aws-sdk": "^2.1596.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
