--- a/lambda/package.json
+++ b/lambda/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "types": "./presignHandler.d.ts",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.552.0",
+    "@aws-sdk/client-ec2": "^3.552.0",
     "@aws-sdk/client-s3": "^3.552.0",
-    "@aws-sdk/s3-request-presigner": "^3.552.0"
+    "@aws-sdk/s3-request-presigner": "^3.552.0",
+    "nanoid": "^3.3.4"
   }
 }
