--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "typescript": "~5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.552.0",
+    "@aws-sdk/client-ec2": "^3.552.0",
     "@aws-sdk/client-s3": "^3.552.0",
     "@aws-sdk/s3-request-presigner": "^3.552.0",
+    "@aws-sdk/util-utf8-node": "^3.259.0",
     "aws-cdk-lib": "2.136.0",
     "aws-sdk": "^2.1596.0",
     "constructs": "^10.0.0",
+    "nanoid": "^3.3.4",
     "source-map-support": "^0.5.21"
   }
 }
